feat: add new method reference through endsWith5G method; chore: clean up unstructured syntax